[package]
name = "purchase-order"
version = "0.1.0"
build = "build.rs"

[dependencies]
protobuf = "2"
cfg-if = "0.1"
hex = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}
sabre-sdk = {git = "https://github.com/hyperledger/sawtooth-sabre"}

[target.'cfg(unix)'.dependencies]
sawtooth-sdk = {git = "https://github.com/hyperledger/sawtooth-sdk-rust"}
log = "0.3.8"
log4rs = "0.7.0"
simple_logger = "0.4.0"
clap = "2"
rust-crypto = "0.2.36"


[build-dependencies]
protoc-rust = "2"